--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.7",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@cloudinary/angular": "^1.0.0-beta.14",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -28,6 +30,7 @@
     "angular-messages": "^1.8.3",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "firebase": "^10.5.2",
     "flowbite": "^2.0.0",
     "ngx-cookie-service": "^16.0.1",
     "primeng": "^16.6.0",
@@ -40,6 +43,8 @@
     "@angular/cli": "^16.2.5",
     "@angular/compiler-cli": "^16.2.0",
     "@angular/localize": "^16.2.0",
+    "@types/angularfire": "^0.8.37",
+    "@types/firebase": "^3.2.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
